--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -808,3 +808,11 @@ body.modal-open {
   }
 }
 
+.fade-section {
+  transition: opacity 0.5s ease-in-out;
+}
+
+.disabled {
+  pointer-events: none; /* This disables clicking */
+  opacity: 0.5; /* This makes the button appear disabled or faded */
+}
