--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,6 +50,80 @@ body {
   background: #092637;
 }
 
+
+
+/* .modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;  
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.75);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+
+.modal-content {
+  background: transparent;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 960px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
+}
+.video-player {
+  max-width: 640px;  
+  width: 100%;      
+  aspect-ratio: 16 / 9;
+} */
+
+
+
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;  
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: transparent; /* Change this if you want a different background */
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 960px;
+  position: relative; /* Position relative for absolute positioning of the close button */
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: none;
+  background: white;
+  font-size: 24px;
+  cursor: pointer;
+}
+
+.video-player {
+  width: 100%;      
+  aspect-ratio: 16 / 9;
+}
+
 /* ::-webkit-scrollbar {
   background-color: transparent;
   width: 10px;
@@ -146,6 +220,12 @@ body {
   font-size: 22px !important;
   color: "#fff";
 }
+
+
+
+
+
+
 
 .swalButtonsYes {
   padding: 3px 18px !important;
