--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -50,35 +50,10 @@ body {
   background: #092637;
 }
 
-/* .modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;  
-  bottom: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.75);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  z-index: 1000;
+.h1_text {
+  font-size: 3.75rem; 
+  line-height: 1.2;
 }
-
-
-.modal-content {
-  background: transparent;
-  padding: 20px;
-  border-radius: 8px;
-  width: 100%;
-  max-width: 960px;
-  box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
-}
-.video-player {
-  max-width: 640px;  
-  width: 100%;      
-  aspect-ratio: 16 / 9;
-} */
 
 .modal-overlay {
   position: fixed;
