--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 @font-face {
   font-family: NunitoSans-Regular;
   src: url(../../public/font/NunitoSans_Regular.ttf);
@@ -46,6 +48,7 @@
   src: url(../../public/font/Lato-Regular.ttf) format("truetype");
 }
 body {
+  font-family: 'Poppins', sans-serif;
   font-family: Lato-Regular;
   background: #092637;
 }
