--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,31 @@ body {
   background: #092637;
 }
 
+.poppins-regular {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+}
+
+.poppins-medium {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 500;
+}
+
+.poppins-semibold {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
+.poppins-bold {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+}
+
+.poppins-extraBold {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 800;
+}
+
 .modal-overlay {
   position: fixed;
   top: 0;
