--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -682,6 +682,12 @@ input.inputBox {
   }
 }
 
+@media (min-width: 1600px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
 /* button loader css */
 .button-loader {
   position: relative;
